# av-technical-assessment

./: .gitignore  CMakeLists.txt
Q1/: Question-1.cc  canBus.h
Q2/: Question-2.cc  Question-2.test.cc  assumptions.txt
Q3/: Question-3.cc
